@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Feb 2010; Froxlor Release Team <release@froxlor.org>
+  froxlor-0.9.1.ebuild, froxlor-9999.ebuild:
+  block the syscp package and tell people what to do when they upgrade
+
   22 Feb 2010; Froxlor Release Team <release@froxlor.org>
   froxlor-0.9.1.ebuild, froxlor-9999.ebuild:
   do not block a dovecot 1.2 upgrade due to usedeps
